2013-04-XX martius (0.8)
	Bugfixes: Following camera mode,...
	Fixation and displacement of robots integrated
	Contacts can be drawn with -drawcontacts
	PlotOptions allow filtering. From commandline e.g. -g 10 "/+x.*/" or "/-C.*/"
	Matrix uses move-assignment from C++11, great speedup

2011-11-11 martius (0.7)
	Build system: use config scripts like selforg-config etc.
	Configurator added (some stability issues remain)
	Operators/Manipulators: observe agent and can turn it over of lift up
	  see LimitOrientationOperator and LiftUpOperator
	Colors and ColorSchema: named colors and alias sets
   	 color palette files (gimp format)
	 alias files: simple tab seperated file


2010-07-05 martius (0.65)
	Build system changed. Object files come to separate directory.
	M4 Makefile for simulations
	Angularmotors bug fixed. Axis were global.
	New Servos (XAxisVel) that control internally the velocity work great now


2010-03-25 martius (0.6)
	long time no update in the Changelog file. Almost everthing changed ;-)
	Main points
	1. Camera Support
	2. Normal target is with -O1 and there is an additional debug target


2008-04-17 martius
	1. OSG2 port
	New viewer is used.
	Various shadow algorithms are avaiable
	2. Multithreading build in using QuickMP
	Controllers (Agent::step) run in parallel
	Threadnumber is the number of processors.
	ODE can also run in a separate thread if wanted, this has some consequences:
	  - sensors are one timestep delayed
	OSG can also run in a separate thread if wanted, this has some consequences:
	  - sometimes the program just stalls right after the start which is due
	    to some problems with the Xlib and concurrent access
	3. Random generator with state
	Agents have there own random generator and
	pass it to controller and wiring
	4. Configuration file
	a config file (~/.lpzrobots/ode_robots.cfg) loads defaults for
	 e.g. shadow, window size, threads and so on.
	The cfg file is written at the first start,