@@ -34,225 +34,80 @@
 // include agent (class for holding a robot, a controller and a wiring)
 #include <ode_robots/odeagent.h>
 
-// used wiring
-#include <selforg/one2onewiring.h>
-#include <selforg/derivativewiring.h>
-
-// used robot
-#include <ode_robots/fourwheeled.h>
-#include <ode_robots/addsensors2robotadapter.h>
-
-#include <ode_robots/torquesensor.h>
-#include <ode_robots/angularmotor.h>
-#include <ode_robots/joint.h>
+#include <ode_robots/speedsensor.h>
+#include <ode_robots/relativepositionsensor.h>
 
 // used arena
 #include <ode_robots/playground.h>
 // used passive spheres
 #include <ode_robots/passivesphere.h>
 
-// used controller
-#include <selforg/sinecontroller.h>
-
 // fetch all the stuff of lpzrobots into scope
 using namespace lpzrobots;
-
 
 class ThisSim : public Simulation {
 public:
   double value;
   double value2;
-  TorqueSensor* ts;
-  std::list<Joint*> joints;
+  std::list<SpeedSensor*> ss;
   std::list<Primitive*> primitives;
-  AngularMotor* amotor;
 
   // starting function (executed once at the beginning of the simulation loop)
   void start(const OdeHandle& odeHandle, const OsgHandle& osgHandle, GlobalData& global)
   {
-    setCameraHomePos(Pos(5.2728, 7.2112, 3.31768), Pos(140.539, -13.1456, 0));
-    global.odeConfig.setParam("noise",0);
+    setCameraHomePos(Pos(7.75018, -4.30236, 3.88123),  Pos(65.2963, -18.5703, 0));
+    bool speed=true;
 
-    bool fixed=false;
-    bool hinge=false;
-    bool universalfixed=false;
-    bool universal=false;
-    bool vehicle=true;
-
-    value=0;
-    value2=0;
-
-    if(fixed){
-      Box* b1 = new Box(1,1,1);
-      Box* b2 = new Box(1,1,1);
-      Box* b3 = new Box(1,1,1);
-      b1->init(odeHandle,1, osgHandle, Primitive::Geom | Primitive::Draw);
+    if(speed){
+      Box* b1 = new Box(0.5,0.2,0.1);
+      Box* b2 = new Box(0.5,0.2,0.1);
+      Box* b3 = new Box(0.5,0.2,0.1);
+      b1->init(odeHandle,1, osgHandle);
       b2->init(odeHandle,1, osgHandle);
       b3->init(odeHandle,1, osgHandle);
-      b1->setPose(TRANSM(0,0,0.5));
-      b2->setPose(TRANSM(0,0,1.7)); // *ROTM(M_PI/10,1,0,0));
-      b3->setPose(TRANSM(-0.5,-0.5,4));
+      b1->setPose(TRANSM(0,0,2));
+      b2->setPose(ROTM(M_PI/2,0,1,0) * TRANSM(1,0,2));
+      b3->setPose(ROTM(M_PI/4,1,0,0) * TRANSM(2,0,2));
       primitives.push_back(b1);
       primitives.push_back(b2);
       primitives.push_back(b3);
-      FixedJoint* j = new FixedJoint(b2,b1,(b1->getPosition()+b2->getPosition())*0.5);
-      j->init(odeHandle,osgHandle,true);
-      joints.push_back(j);
-      ts = new TorqueSensor(j,1);
-      ts->init(b1);
+      SpeedSensor* s;
+      s = new SpeedSensor(1.0, SpeedSensor::Translational);    s->init(b1); ss += s;
+      s = new SpeedSensor(1.0, SpeedSensor::TranslationalRel); s->init(b1); ss += s;
+      s = new SpeedSensor(1.0, SpeedSensor::Translational);    s->init(b2); ss += s;
+      s = new SpeedSensor(1.0, SpeedSensor::TranslationalRel); s->init(b2); ss += s;
+      s = new SpeedSensor(1.0, SpeedSensor::Translational);    s->init(b3); ss += s;
+      s = new SpeedSensor(1.0, SpeedSensor::TranslationalRel); s->init(b3); ss += s;
     }
 
-    if(hinge){
-      Box* b1 = new Box(1,1,1);
-      Box* b2 = new Box(1,1,1);
-      b1->init(odeHandle,1, osgHandle, Primitive::Geom | Primitive::Draw);
-      b2->init(odeHandle,1, osgHandle);
-      Pose m = ROTM(M_PI/10,0,0,1);
-      b1->setPose(TRANSM(0,0,3)*m);
-      b2->setPose(TRANSM(0,0,1)*m); // *ROTM(M_PI/10,1,0,0));
-      primitives.push_back(b1);
-      primitives.push_back(b2);
-      HingeJoint* j = new HingeJoint(b2,b1,(b1->getPosition()+b2->getPosition())*0.5,
-                                     Axis(1,0,0)*m);
-      j->init(odeHandle,osgHandle,true);
-      joints.push_back(j);
-      ts = new TorqueSensor(j,1);
-      ts->init(b1);
-
-      amotor = new AngularMotor1Axis(odeHandle,j,10);
-    }
-
-    // bug of amotor with fixed object
-    if(universalfixed){
-      Box* b1 = new Box(1,1,1);
-      Box* b2 = new Box(1,1,1);
-      b1->init(odeHandle,1, osgHandle, Primitive::Geom | Primitive::Draw);
-      b2->init(odeHandle,1, osgHandle);
-      Pose m = ROTM(M_PI/10,0,0,1);
-      b1->setPose(TRANSM(0,0,3)*m);
-      b2->setPose(TRANSM(0,0,1)*m); // *ROTM(M_PI/10,1,0,0));
-      primitives.push_back(b1);
-      primitives.push_back(b2);
-      UniversalJoint* j = new UniversalJoint(b2,b1,(b1->getPosition()+b2->getPosition())*0.5,
-                                             Axis(0,1,0)*m, Axis(1,0,0)*m);
-      j->init(odeHandle,osgHandle,true);
-      joints.push_back(j);
-      ts = new TorqueSensor(j,1);
-      ts->init(b1);
-
-      amotor = new AngularMotor2Axis(odeHandle,j,10,10);
-    }
-
-    if(universal){
-      Box* b1 = new Box(1,1,1);
-      Box* b2 = new Box(1,1,1);
-      b1->init(odeHandle,1, osgHandle);
-      b2->init(odeHandle,10, osgHandle);
-      Pose m = ROTM(M_PI/10,0,0,1);
-      b1->setPose(TRANSM(0,0,4)*m);
-      b2->setPose(TRANSM(0,0,0.5)*m); // *ROTM(M_PI/10,1,0,0));
-      primitives.push_back(b1);
-      primitives.push_back(b2);
-      UniversalJoint* j = new UniversalJoint(b2,b1,Pos(0,0,3)*m,
-                                             Axis(0,1,0)*m, Axis(1,0,0)*m);
-      j->init(odeHandle,osgHandle,true);
-      joints.push_back(j);
-      ts = new TorqueSensor(j,10,8);
-      ts->init(b1);
-
-      amotor = new AngularMotor2Axis(odeHandle,j,10,10);
-    }
-
-
-
-    if(vehicle){
-      // use FourWheeled vehicle as robot:
-      FourWheeledConf fc = FourWheeled::getDefaultConf();
-      fc.twoWheelMode = true;
-      fc.useBumper    = false;
-      fc.irFront      = true;
-      FourWheeled* fw = new FourWheeled(odeHandle, osgHandle,
-                                        fc, "TestVehicle");
-      std::list<Sensor*> sensors;
-      AddSensors2RobotAdapter* vehicle = new AddSensors2RobotAdapter(odeHandle, osgHandle,
-                                                                     fw, sensors);
-      vehicle->place(osg::Matrix::translate(0,0,0));
-      ts = new TorqueSensor(fw->getJoint(0),1);
-      vehicle->addSensor(ts);
-      //    vehicle->addSensor(new TorqueSensor(fw->getJoint(2),16));
-      global.configs.push_back(vehicle);
-
-      AbstractController *controller = new SineController();
-      controller->setParam("period",300);
-      controller->setParam("phaseshift",0.);
-      global.configs.push_back(controller);
-
-      One2OneWiring* wiring = new One2OneWiring(new ColorUniformNoise(0.1));
-
-      OdeAgent* agent = new OdeAgent(global);
-      agent->init(controller, vehicle, wiring);
-      global.agents.push_back(agent);
-    }
   }
 
   virtual void addCallback(GlobalData& globalData, bool draw, bool pause, bool control) {
-    FOREACH(std::list<Joint*>, joints,j){
-      (*j)->update();
-    }
     FOREACH(std::list<Primitive*>, primitives,p){
       (*p)->update();
     }
-    ts->sense(globalData);
-    if(control){
-      std::list<sensor> ss = ts->get();
-      printf("Sensor: ");
-      FOREACHC(std::list<sensor>, ss,s){
-        printf("\t%f",*s);
-      }
-      printf("\n");
+    FOREACH(std::list<SpeedSensor*>, ss,s){
+      (*s)->sense(globalData);
     }
-  };
-
-
-  // add own key handling stuff here, just insert some case values
-  virtual bool command(const OdeHandle&, const OsgHandle&, GlobalData& globalData, int key, bool down)
-  {
-    if (down) { // only when key is pressed, not when released
-      switch ( (char) key )
-        {
-        case 'k':
-          value+=.1;
-          if(amotor)
-            amotor->set(0,value);
-          printf("value0: %f\n", value);
-          break;
-        case 'K':
-          value-=.1;
-          if(amotor)
-            amotor->set(0,value);
-          printf("value0: %f\n", value);
-          break;
-        case 'i':
-          value2+=.1;
-          if(amotor)
-            amotor->set(1,value2);
-          printf("value1: %f\n", value2);
-          break;
-        case 'I':
-          value2-=.1;
-          if(amotor)
-            amotor->set(1,value2);
-          printf("value1: %f\n", value2);
-          break;
-        default:
-          return false;
-          break;
+    if(globalData.sim_step==20){
+      int i=0;
+      if(control){
+        FOREACH(std::list<SpeedSensor*>, ss,s){
+          std::list<sensor> vals = (*s)->get();
+          printf("Sensor %i: ", i);
+          FOREACHC(std::list<sensor>, vals,v){
+            printf("\t%f",*v);
+          }
+          printf("\n");
+          i++;
         }
+      }
     }
-    return false;
-  }
+    if(globalData.sim_step>40){
+      simulation_time_reached=true;
+    }
 
-
+  };
 
 };
 
